--- a/templates/base-admin.html
+++ b/templates/base-admin.html
@@ -72,7 +72,7 @@
 					<a href="{% url 'my_task' %}" class="list-group-item menu-left">Мои задачи</a>
 					<a href="{% url 'zayavka' %}" class="list-group-item menu-left">Заявки</a>
 					<a href="" class="list-group-item menu-left">Фотобаза</a>
-					<a href="" class="list-group-item menu-left">Чёрный список</a>
+					<a href="{% url 'black_list' %}" class="list-group-item menu-left">Чёрный список</a>
 					<a href="{% url 'add_client' %}" class="list-group-item menu-left">Добавить клиента</a>
 					<a href="{% url 'add_object' %}" class="list-group-item menu-left">Добавить объект</a>
 					<a href="{% url 'add_task' %}" class="list-group-item menu-left">Новая задача</a>
