--- a/templates/base-admin.html
+++ b/templates/base-admin.html
@@ -76,7 +76,7 @@
 					<a href="{% url 'add_client' %}" class="list-group-item menu-left">Добавить клиента</a>
 					<a href="{% url 'add_object' %}" class="list-group-item menu-left">Добавить объект</a>
 					<a href="{% url 'add_task' %}" class="list-group-item menu-left">Новая задача</a>
-					<a href="" class="list-group-item menu-left">Приоритеты</a>
+					<a href="{% url 'prioritet' %}" class="list-group-item menu-left">Приоритеты</a>
 					<a href="/accounts/logout" class="list-group-item menu-left">Выход</a>
 				</div>
 		</aside>
