--- a/myclient/static/css/style-admin.css
+++ b/myclient/static/css/style-admin.css
@@ -90,7 +90,26 @@ h1, h2, h3, h4, h5{
     padding: 5px;
     border: 1px solid #cecece;
 }
-
+/* Заявки окно удаления */
+#dell2 {
+    position: fixed;
+    width: 300px;
+    z-index: 22;
+    height: 200px;
+    border: 1px solid #cecece;
+    margin: 0 20%;
+    background: #fff;
+    box-shadow: 1px 1px 20px 7px #cecece;
+    display: none;
+    padding: 10px;
+}
+.dell_body{
+    height: 100px;
+}
+.dell_footer{
+    height: : 50px;
+    text-align: right;
+}
 /*Правый сайдбар*/
 .right-side {
     width: 15%;
