--- a/templates/myclient/prioritet/prioritet.html
+++ b/templates/myclient/prioritet/prioritet.html
@@ -22,26 +22,17 @@
     </th>
 
     {% for list in prioritet %}
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="myModalLabel">Удалить приоритет '{{list.prioritet}}'</h4>
-          </div>
-          <div class="modal-body">
-              <form action="{% url 'delete_prio' pk=list.id %}" method="POST">
-                {% csrf_token %}
-                {% buttons %}
-                {% bootstrap_button "Да" button_type="submit" button_class="btn-primary" %}
-                <a class="btn-warning btn" href="{% url 'prioritet' %}">Нет</a>
-                {% endbuttons %}
-              </form>
-          </div>
 
+    <div id="dell2" class="{{list.id}}">
+        <h4>Удалить приоритет '{{list.prioritet}}'</h4>
+        <div class="dell_body">
         </div>
-      </div>
+        <div class="dell_footer">
+            <a class="btn-warning btn" name="del" id="{{list.id}}" href="">Да</a>
+            <a class="btn-warning btn" href="{% url 'prioritet' %}">Нет</a>
+        </div>
     </div>
+
     <tr>
         <td>
             {{list.num}}
@@ -51,10 +42,35 @@
         </td>
         <td>
             <a href="{% url 'update_prio' pk=list.pk %}">Редактировать</a><br />
-            <a href="" data-toggle="modal" data-target="#myModal">Удалить</a><br />
+            <a href="#" id="d" name="dell" class="{{list.id}}" >Удалить</a><br />
         </td>
     </tr>
     {% endfor %}
 </table>
+<script>
+    jQuery(document).ready(function($) {
+          $('a[name=del]').click(function(e) {
+              id = $(this).attr("id");
+              id = parseInt(id);
+              $.post("delete_prio/",
+                 {
+                      'pk': id,
 
+                  },
+                  function(data) {
+                      $('.'+id).hide();
+                      //$('table').html(data);
+                  }
+              );
+              //return false;
+          });
+         //$('a[name=dell]').click(function() {
+            // $('#dell').show();
+         //});
+         $('body').on('click','#d',function(){
+            num = $(this).attr("class");
+            $('.'+num).show();
+        });
+    });
+</script>
 {% endblock %}
