--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="работа в интернете, реклама,продвижение,раскрутка,оптимизация,сео,серфинг,тесты,опросы,задания">
 	<title>{% block title %}Административная панель{% endblock %}</title>
 	<link rel="shortcut icon" href="{% static 'img/favicon.png' %}" type="image/png">
-	<link rel="stylesheet" href="{% static 'css/style.css' %}" />
+	<link rel="stylesheet" href="{% static 'css/style-admin.css' %}" />
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
 	<script src="{% static 'js/bootstrap.min.js' %}"></script>
