--- a/templates/myclient/add-client.html
+++ b/templates/myclient/add-client.html
@@ -8,7 +8,11 @@
 Добавить клиента
 {% endblock %}
 
+
 {% block content %}
+{% if  error %}
+    <h2>{{error}}</h2>
+{% endif %}
 <form   method="post" action="">
     {% csrf_token %}
     {% bootstrap_form form %}
