--- a/templates/contactform/zayavki.html
+++ b/templates/contactform/zayavki.html
@@ -1,4 +1,8 @@
-{% extends 'myclient/base.html' %} {% load bootstrap3 %} {% block title %} Заявки {% endblock %} {% block content-title %} Заявки {% endblock %} {% block content %}
+{% extends 'myclient/base.html' %}
+{% load bootstrap3 %}
+{% block title %} Заявки {% endblock %}
+{% block content-title %} Заявки {% endblock %}
+{% block content %}
 
 <table class="table table-bordered table-hover">
     <th class="active id">
@@ -42,6 +46,17 @@
     </th>
 
     {% for zvon in zayavka %}
+
+    <div id="dell2" class="{{zvon.id}}">
+        <h4>Удалить заявку '{{zvon.id}}' ?</h4>
+        <div class="dell_body">
+        </div>
+        <div class="dell_footer">
+            <a class="btn-primary btn" name="yes" id="{{zvon.id}}" href="">Да</a>
+            <a class="btn-warning btn no" id="{{zvon.id}}" href="">Нет</a>
+        </div>
+    </div>
+
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
@@ -51,13 +66,14 @@
             <h4 class="modal-title" id="myModalLabel">Редактировать</h4>
           </div>
           <div class="modal-body">
-              <form id="contactform" name="contact" method="get" action="{% url 'edit_zvon' pk=zvon.id %}">
+              <form id="contactform" name="contact" method="post" action="{% url 'edit_zvon' pk=zvon.id %}">
                   <p class="note"><span class="req"></span> Поля обязательны для заполнения</p>
                   {% csrf_token %}
                   <div id="forms">
-                      {# form.as_p #}
+
+
                   </div>
-                 <input class="btn-us" type="submit" value="Отправить" />
+
                  <div class="modal-footer">
                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
                    <button type="submit" class="btn btn-primary">Сохранить изменения</button>
@@ -149,16 +165,16 @@
                     </div>
                 </div>
             </div>
-            <a href="#dialog-red" name="modal3" id="{{zvon.id}}">Редактировать</a><br />
-            <a href="{% url 'delete_zayavka' pk=zvon.pk %}">Удалить</a>
+            <a href="#dialog-red" name="modal" id="{{zvon.id}}">Редактировать</a><br />
+            <a href="#" id="delete" name="dell" class="{{zvon.id}}" >Удалить</a><br />
         </td>
     </tr>
     <script>
-        //jQuery(document).ready(function($) {
-    //$('a[name=modal]').click(function(e) {
-    //    window.open("{% url 'update_zayavka' pk=zvon.pk %}", 'Редактировать заявку', 'width=1000px,height=500px,toolbar=0,status=0');
-    //});
-//});
+        jQuery(document).ready(function($) {
+    $('a[name=modal]').click(function(e) {
+        window.open("{% url 'update_zayavka' pk=zvon.pk %}", 'Редактировать заявку', 'width=1000px,height=500px,toolbar=0,status=0');
+    });
+});
 </script>
     {% endfor %}
 </table>
@@ -170,13 +186,14 @@
           $('a[name=modal3]').click(function(e) {
               id = $(this).attr("id");
               id = parseInt(id);
-              $.post("update_zvon/",
+              $.post("{% url 'update_zvon' %}",
                  {
                       'pk': id,
 
                   },
                   function(data) {
                       $('#myModal').modal('toggle');
+                      //$('#forms').html(data);
                       $('#forms').html(data);
                   }
               );
@@ -214,6 +231,29 @@
             $('.window-zvon').hide();
         });
 
+        // Удаление
+        $('a[name=yes]').click(function(e) {
+            id = $(this).attr("id");
+            id = parseInt(id);
+            $.post("{% url 'delete_zayavka' %}",
+               {
+                    'pk': id,
+                },
+                function(data) {
+                    $('.'+id).hide("slow");
+                    //$('#p').html(data);
+                }
+            );
+            //return false;
+        });
+        $('body').on('click','#delete',function(){
+            num = $(this).attr("class");
+              $('.'+num).show("slow");
+        });
+        $('body').on('click','.no',function(){
+             num = $(this).attr("id");
+             $('.'+num).hide();
+        });
 
     });
 </script>
