--- a/templates/base-admin.html
+++ b/templates/base-admin.html
@@ -67,7 +67,7 @@
 		{% if user.is_active %}
 		<aside class="right-side">
 				<div class="profi">
-					<a href="{% url 'my_client' %}" class="list-group-item menu-left">Мои клиенты</a>
+					<a href="{% url 'my_client' pk=user.id%}" class="list-group-item menu-left">Мои клиенты</a>
 					<a href="{% url 'my_object' %}" class="list-group-item menu-left">Мои объекты</a>
 					<a href="{% url 'my_task' %}" class="list-group-item menu-left">Мои задачи</a>
 					<a href="{% url 'zayavka' %}" class="list-group-item menu-left">Заявки</a>
