--- a/templates/myclient/my-client.html
+++ b/templates/myclient/my-client.html
@@ -131,6 +131,7 @@
         <a href="{% url 'update_client' pk=client.pk %}">Редактировать</a><br />
         <a href="{% url 'delete_client' pk=client.pk %}">Удалить</a>
         <a href="{% url 'copy_client' pk=client.pk %}">Копировать</a>
+        <a href="">Прозвонить</a>
     </td>
 </tr>
 
