--- a/templates/myclient/my-task.html
+++ b/templates/myclient/my-task.html
@@ -18,12 +18,12 @@
     </div>
 
     <div>
-        <a href="{% url 'my_client' %}" class="btn btn-primary btn-xs">Сделано</a>
-        <a href="{% url 'my_client' %}" class="btn btn-primary btn-xs">Изменить</a>
-        <a href="{% url 'my_client' %}" class="btn btn-primary btn-xs">На завтра</a>
-        <a href="{% url 'my_client' %}" class="btn btn-primary btn-xs">Позже</a>
-        <a href="{% url 'my_client' %}" class="btn btn-primary btn-xs">Через неделю</a>
-        <a href="{% url 'my_client' %}" class="btn btn-primary btn-xs">Другое</a>
+        <a href="{# url 'my_client' #}" class="btn btn-primary btn-xs">Сделано</a>
+        <a href="" class="btn btn-primary btn-xs">Изменить</a>
+        <a href="" class="btn btn-primary btn-xs">На завтра</a>
+        <a href="" class="btn btn-primary btn-xs">Позже</a>
+        <a href="" class="btn btn-primary btn-xs">Через неделю</a>
+        <a href="" class="btn btn-primary btn-xs">Другое</a>
     </div>
 </div>
 {% endfor %}
