--- a/templates/myclient/client_delete.html
+++ b/templates/myclient/client_delete.html
@@ -13,7 +13,7 @@
   {% csrf_token %}
   {% buttons %}
   {% bootstrap_button "Да" button_type="submit" button_class="btn-primary" %}
-  <a class="btn-warning btn" href="{% url "my_client" %}">Нет</a>
+  <a class="btn-warning btn" href="{% url "my_client" pk=user.id %}">Нет</a>
   {% endbuttons %}
 
 </form>
