--- a/templates/base-site.html
+++ b/templates/base-site.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-	<div class="page2">
+	<div class="page">
         <div class="menu-bar">
             <div class="head">
                 <div class="logo">
@@ -74,22 +74,12 @@
 			</nav>
 		</div>
 </div>
-
-        <div class="search-head">
-			<div class="search-head-form">
-				<form class="form_s_s" name="contact" method="post" action="{% url 'search_object' %}">
-					{% csrf_token %} {% bootstrap_form object_form_s %}
-					<button type="submit" class="btn btn-primary btn-md btn-serch"><span class="glyphicon glyphicon-play"></span></button>
-				</form>
-			</div>
-			<div class="search-head-form">
-				<form class="form_s_s" name="contact" method="post" action="{% url 'search_adres' %}">
-					{% csrf_token %} {% bootstrap_form metro_form_s %}
-					<button type="submit" class="btn btn-primary btn-md btn-serch"><span class="glyphicon glyphicon-play"></span></button>
-				</form>
-			</div>
-		</div>
-
+<div class="title-site">
+    <h1>АРЕНДА ПОМЕЩЕНИЙ</h1>
+    <p>
+        у метро и в проходных местах
+    </p>
+</div>
 
 		<div class="main-site">
 			{% block search %}
@@ -110,6 +100,7 @@
 	</div>
 
 	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+
 </body>
 
 </html>
