--- a/templates/site/home.html
+++ b/templates/site/home.html
@@ -1,8 +1,19 @@
 {% extends 'base-site.html' %}
 {% load bootstrap3 %}
 {% block search %}
-<div class="search">
-
+<div class="search-head">
+    <div class="search-head-form">
+        <form class="form_s_s" name="contact" method="post" action="{% url 'search_object' %}">
+            {% csrf_token %} {% bootstrap_form object_form_s %}
+            <button type="submit" class="btn btn-primary btn-md btn-serch"><span class="glyphicon glyphicon-play"></span></button>
+        </form>
+    </div>
+    <div class="search-head-form">
+        <form class="form_s_s" name="contact" method="post" action="{% url 'search_adres' %}">
+            {% csrf_token %} {% bootstrap_form metro_form_s %}
+            <button type="submit" class="btn btn-primary btn-md btn-serch"><span class="glyphicon glyphicon-play"></span></button>
+        </form>
+    </div>
 </div>
 {% endblock %}
 {% block content-title %}
