--- a/templates/base-site.html
+++ b/templates/base-site.html
@@ -94,7 +94,19 @@
 		</div>
 		<footer>
 			<div class="footer">
-				Все права защищены &copy; 2017. Омельченко Михаил
+			<a href="/"><img src="{% static 'images/logo.jpg' %}"></a>
+
+            <ul class="nav navbar-nav navbar-right nav-footer">
+                <li class="li-footer-day">
+                    <span class="span-day">с 10.00 до 18.00 будни</span>
+                </li>
+                <li class="li-footer">
+                    <span class="span-tel">(495) 58-58-231</span>
+                </li>
+                <li>
+                    <a href="#" class="a-nav-btn">ЗАДАТЬ ВОПРОС</a>
+                </li>
+            </ul>
 			</div>
 		</footer>
 	</div>
