--- a/myclient/static/css/style.css
+++ b/myclient/static/css/style.css
@@ -173,17 +173,28 @@ a.a-nav::before{
 .footer {
     margin: 25px auto;
     top: 100%;
-    height: 50px;
+    height: 115px;
     background-color: #f5f5f5;
     padding: 15px;
     /* float: left; */
     position: absolute;
     bottom: 0;
     width: 1000px;
-    box-shadow: 1px 1px 10px 1px #cecece;
+    /* box-shadow: 1px 1px 10px 1px #cecece; */
+    border-top: 1px solid #8ebddb;
 }
-
-
+.nav-footer{
+    margin: 20px 5px 0 0 !important;
+}
+.span-day{
+    font-size: 20px;
+}
+.li-footer-day{
+    margin: 10px 30px 0 0;
+}
+.li-footer{
+    margin-right: 100px;
+}
 /*Медиа*/
 @media (max-width: 992px){
 .left-side, .right-side {
