--- a/myclient/static/css/style.css
+++ b/myclient/static/css/style.css
@@ -169,15 +169,27 @@ a.a-nav::before{
     /*box-shadow: 1px 1px 1px 1px #cecece;*/
     background: url(../images/bg-search2.png) no-repeat top left;
 }
+.content{
+    padding: 60px;
+}
+.myobj{
+    width: 285px;
+    float: left;
+}
 /*Футер*/
+footer{
+    width: 100%;
+    margin: auto;
+    background-color: #fff;
+}
 .footer {
     margin: 25px auto;
     top: 100%;
     height: 115px;
     background-color: #f5f5f5;
     padding: 15px;
-    /* float: left; */
-    position: absolute;
+    /* float: left;
+    position: absolute;*/
     bottom: 0;
     width: 1000px;
     /* box-shadow: 1px 1px 10px 1px #cecece; */
