add myobject to delete view

--- a/templates/admin/delete_user.html
+++ b/templates/admin/delete_user.html
@@ -11,18 +11,24 @@
 
 {% block content %}
 
+  <h1>У данного менеджера есть клиенты и/или объекты выберите кому их передать</h1>
+  
   {% if del_user.client_set.exists %}
-
-    <h1>У данного менеджера есть клиенты выберите кому их передать</h1>
     <span>
-    Количество клиентов менеджера: {{ del_user.client_set.count }}
+    Количество клиентов у менеджера: {{ del_user.client_set.count }}
     </span>
+  {% endif %}
 
-    <form action="." method="post">
-      {%csrf_token%}
-      {{form.as_p}}
-      <input type="submit" value="Да, удалить менеджера." />
-      <a href="{% url 'admin:auth_user_change' del_user.pk %}" class="button cancel-link">Отмена</a>
-    <form>
-  {% endif %}  
+  {% if del_user.myobject_set.exists %}
+    <span>
+    Количество объектов у менеджера: {{ del_user.myobject_set.count }}
+    </span>
+  {% endif %}
+
+  <form action="." method="post">
+    {%csrf_token%}
+    {{form.as_p}}
+    <input type="submit" value="Да, удалить менеджера." />
+    <a href="{% url 'admin:auth_user_change' del_user.pk %}" class="button cancel-link">Отмена</a>
+  <form>
 {% endblock %}
