--- a/templates/myclient/add_task_client.html
+++ b/templates/myclient/add_task_client.html
@@ -16,4 +16,19 @@
     {% bootstrap_button "Сохранить" button_type="submit" button_class="btn-primary" %}
     {% endbuttons %}
 </form>
+<script>
+	jQuery(document).ready(function($) {
+
+$( "#id_date" ).datepicker(
+    {dateFormat: 'yy-mm-dd'},
+    $.datepicker.regional['ru'] = {
+        monthNames: ['Яварь', 'Февраль', 'Март', 'Апрель',
+            'Май', 'Июнь', 'Июль', 'Август', 'Сентябрь',
+            'Октябрь', 'Ноябрь', 'Декабрь'],
+        dayNamesMin: ['Вс','Пн','Вт','Ср','Чт','Пт','Сб'],
+        firstDay: 1,
+        });
+    $.datepicker.setDefaults($.datepicker.regional['ru']);
+});
+</script>
 {% endblock %}
