--- a/templates/site/home.html
+++ b/templates/site/home.html
@@ -21,6 +21,10 @@
 {% endblock %}
 
 {% block content %}
+<form class="form_s_3s" name="contact" method="post" action="">
+    {% csrf_token %} {% bootstrap_form search_obj %}
+    <button type="submit" class="btn btn-md btn-search-obj"><span class="search-obj">ИСКАТЬ</span></button>
+</form>
 <div>
     {% for obj in myobj %}
 
